--- a/templates/nzbdrone/base.html
+++ b/templates/nzbdrone/base.html
@@ -6,7 +6,7 @@
 
   <h2 class="title">
     {% block nzbdrone_title %}
-      <a href="{{ asd|nzbdrone_app_link }}" class="app_link" target="_blank">NZBDrone</a>
+      <a href="" class="app_link" target="_blank">NZBDrone</a>
     {% endblock %}
   </h2>
 
@@ -24,11 +24,6 @@
     <span class="operation_only">
       <input class="query" type="search" placeholder="Search TV Shows"></input>
       <span class="loading"></span>
-    </span>
-    <span class="settings_only">
-      <a class="button log" title ="NZBDrone logs">Log</a>
-      <a class="button restart" title ="Restart NZBDrone"><img src="{{ url_for('static', filename='images/reboot.png') }}" /></a>
-      <a class="button power" title ="Shutdown NZBDrone"><img src="{{ url_for('static', filename='images/shutdown.png') }}" /></a>
     </span>
   </div>
 </div>
