--- a/templates/nzbget/queue.html
+++ b/templates/nzbget/queue.html
@@ -1,15 +1,7 @@
 {% extends "nzbget/base.html" %}
 
 {% block nzbget_content %}
-  <div class="status" id="status" data-paused="{{ nzbget.DownloadPaused }}" title="Toggle paused/downloading">
-    {% if nzbget.DownloadPaused %}
-      Paused
-    {%else%}
-      Downloading
-    {%endif%}
-  </div>
-  <div class="speed"><input type="text" value="{{ (nzbget.DownloadRate|convert_bytes(False))[0] }}" title="Adjust Speed" size="5"/>{{(nzbget.DownloadRate|convert_bytes(False))[1]}}</div>
-
+  
   <p>{{ downloads[0].NZBNicename }}</p>
 
   <div class="bar">
@@ -24,7 +16,7 @@
   <div class="queue {% if item %}{{ queue_status }}{% else %}show{% endif %}">
     <table>
     {% for item in downloads %}
-      <tr id="{{item.LastID}}" data-action={% if item.PausedSizeMB %}resume{% else %}pause{% endif %}>
+      <tr id="{{item.LastID}}">
         <td class="pause"><img src="{% if item.PausedSizeMB %}{{ url_for('static', filename='images/play.png') }}{% else %}{{ url_for('static', filename='images/pause.png') }}{% endif %}" ></td>
         <td class="name">{{item.NZBNicename}}</td>
         <td class="size">{{item.FileSizeMB}}MB</td>
