--- a/templates/couchpotato/base.html
+++ b/templates/couchpotato/base.html
@@ -6,7 +6,7 @@
 
   <h2 class="title">
     {% block couchpotato_title %}
-      <a href="{{ app_link }}" class="app_link" target="_blank">CouchPotato</a>
+      CouchPotato
     {% endblock %}
   </h2>
 
